--- a/sample/bearsunday/sandbox.app.html
+++ b/sample/bearsunday/sandbox.app.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <!-- Kenneth Kufluk 2008/09/10 -->
-  <title>Doctrine\Common\Annotations\SimpleAnnotationReader</title>
+  <title>sandbox\App</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <base href="http://koriym.github.com/print_o/assets/">
   <link href="/assets/css/bootstrap.css" rel="stylesheet" />
