Add all sandbox objects at once

--- a/sample/bearsunday/sandbox.app2.html
+++ b/sample/bearsunday/sandbox.app2.html
@@ -5,7 +5,7 @@
   <!-- Kenneth Kufluk 2008/09/10 -->
   <title>Object Graph</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <base href="/_dev/graph/">
+<base href="http://koriym.github.com/print_o/assets/">
   <link href="/assets/css/bootstrap.css" rel="stylesheet" />
   <link href="../libs/debuglib.css" rel="stylesheet" />
   <link href="mindmap.css" rel="stylesheet" />
