Add all sandbox objects at once

--- a/sample/bearsunday/sandbox.app2.html
+++ b/sample/bearsunday/sandbox.app2.html
@@ -16,7 +16,7 @@
   <!-- Raphael for SVG support (won't work on android) -->
   <script type="text/javascript" src="raphael-min.js"></script>
   <!-- Mindmap -->
-  <script type="text/javascript" src="mindmap.js"></script>
+  <script type="text/javascript" src="mindmap.all.js"></script>
   <!-- Kick everything off -->
   <script src="script.js" type="text/javascript"></script>
 	<script type="text/javascript">
