--- a/sample/bearsunday/sandbox.app2.html
+++ b/sample/bearsunday/sandbox.app2.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <base href="http://koriym.github.com/print_o/assets/">
   <link href="/assets/css/bootstrap.css" rel="stylesheet" />
-  <link href="../libs/debuglib.css" rel="stylesheet" />
+  <link href="debuglib.css" rel="stylesheet" />
   <link href="mindmap.css" rel="stylesheet" />
   <!-- jQuery -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
